[tool.poetry]
name = "realwise"
version = "0.1.0"
description = ""
authors = ["pfaraut <faraut.pierre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
pandas = "^2.2.1"
polars = "^0.20.14"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
